--- a/src/homeDisplay/homeDisplay.scss
+++ b/src/homeDisplay/homeDisplay.scss
@@ -1,9 +1,10 @@
 @import "../_module.scss";
 .home-display {
     position: absolute;
-    margin-top: 5vh;
+    width: 100vw;
+    height: 100vh;
     img {
-        @include width-height(100vw,100vh);
+        @include width-height(100%,100%);
         filter: opacity(40%);
     }
     h2,
